// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Marker component rendering renders an empty marker 1`] = `
<div>
  <div
    class="marker_yxvend-o_O-markerSelected_skdxd0"
    style="left: 50%; inset-block-start: 50%;"
    title="Click to select marker answers or to delete marker. Repositioning marker is not implemented."
  >
    <div>
      <div
        class="dropdownBody_82esa5-o_O-dropdownPositionWithArrow_xb6zwq"
      >
        <button
          class="notAButton_15oq5w2"
          role="menuitemradio"
          value=""
        >
          <span
            class="option_ehjbkx"
          >
            Delete marker
          </span>
        </button>
        <hr
          class="dividerHorizontal_1035dhn"
        />
        <div
          class="optionGroup_1lwi6b"
        />
        <div
          class="labelContainer_cyxkvw"
        >
          <form
            class="input_nn7qe2-o_O-container_181i2ew-o_O-defaultBackground_vxglvu"
            style="width: 100%;"
          >
            <input
              class="inputBase_ca6tue"
              placeholder="ARIA label (for screen readers)"
              value="Marker 1"
            />
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Marker component rendering renders with answers and choices 1`] = `
<div>
  <div
    class="marker_yxvend-o_O-markerWithAnswers_hvf8qy-o_O-markerSelected_skdxd0"
    style="left: 50%; inset-block-start: 50%;"
    title="Click to select marker answers or to delete marker. Repositioning marker is not implemented."
  >
    <div>
      <div
        class="dropdownBody_82esa5-o_O-dropdownPositionWithArrow_xb6zwq"
      >
        <button
          class="notAButton_15oq5w2"
          role="menuitemradio"
          value=""
        >
          <span
            class="option_ehjbkx"
          >
            Delete marker
          </span>
        </button>
        <hr
          class="dividerHorizontal_1035dhn"
        />
        <div
          class="optionGroup_1lwi6b"
        >
          <button
            aria-checked="false"
            class="notAButton_15oq5w2"
            role="menuitemradio"
            value="Choice 1"
          >
            <span
              class="option_ehjbkx"
            >
              Choice 1
            </span>
          </button>
          <button
            aria-checked="false"
            class="notAButton_15oq5w2"
            role="menuitemradio"
            value="Choice 2"
          >
            <span
              class="option_ehjbkx"
            >
              Choice 2
            </span>
          </button>
        </div>
        <div
          class="labelContainer_cyxkvw"
        >
          <form
            class="input_nn7qe2-o_O-container_181i2ew-o_O-defaultBackground_vxglvu"
            style="width: 100%;"
          >
            <input
              class="inputBase_ca6tue"
              placeholder="ARIA label (for screen readers)"
              value="Marker 1"
            />
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
